enforce repo lower case for repo push to GHCR

--- a/.github/workflows/build_push_image.yaml
+++ b/.github/workflows/build_push_image.yaml
@@ -28,4 +28,4 @@ jobs:
           echo "tag=$TAG" >> $GITHUB_ENV
 
       - name: Push image to GHCR
-        run: docker push ghcr.io/${{ github.repository }}:${{ env.tag }}
+        run: docker push ghcr.io/$REPOSITORY_NAME:${{ env.tag }}
